--- a/0x00-html_advanced/contact.html
+++ b/0x00-html_advanced/contact.html
@@ -8,7 +8,7 @@
       initial-scale="1.0"
       viewport-fit="cover"
     />
-    <title>Contact</title>
+    <title>Contact- Techium</title>
     <meta name="description" content="Techium is a digital agency" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="icon" href="./favicon.png" type="image/png" />
