--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      width="device-width"
-      initial-scale="1.0"
-      ,
+      content="width=device-width, initial-scale=1.0"
       viewport-fit="cover"
     />
     <title>Homepage - Techium</title>
