--- a/0x00-html_advanced/3-index.html
+++ b/0x00-html_advanced/3-index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" width="device-width", initial-scale="1.0" viewport-fit="cover">
-        <title>Homepage - Techium</title>
-        <meta name="description" content="Techium is a digital agency">
-        <link rel="icon" href="./favicon.ico" type="image/x-icon">
-        <link rel="icon" href="./favicon.png" type="image/png">
-    </head>
-    <body>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
+    <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency" />
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./favicon.png" type="image/png" />
+  </head>
+  <body>
+    <header>Header</header>
 
-        <header>
-            Header
-        </header>
+    <main>Main Content</main>
 
-        <main>
-            Main Content
-        </main>
-
-        <footer>
-            Footer
-        </footer>
-        
-    </body>
+    <footer>Footer</footer>
+  </body>
 </html>
