--- a/0x00-html_advanced/11-styleguide.html
+++ b/0x00-html_advanced/11-styleguide.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      width="device-width"
-      ,
-      initial-scale="1.0"
-      viewport-fit="cover"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <title>Styleguide - Techium</title>
     <meta name="description" content="Techium is a digital agency" />
