--- a/0x00-html_advanced/28-styleguide.html
+++ b/0x00-html_advanced/28-styleguide.html
@@ -13,7 +13,6 @@
   </head>
   <body>
     <header></header>
-
     <main>
       <section>
         <header>
@@ -83,7 +82,7 @@
         <header>
           <h2>Horizontal rule</h2>
         </header>
-        <div>Horizontal rule</div>
+        <div><hr /></div>
       </section>
     </main>
 
