--- a/0x02-CSS_advanced/index.html
+++ b/0x02-CSS_advanced/index.html
@@ -11,7 +11,7 @@
       name="description"
       content="Description of the page less than 150 characters"
     />
-    <link rel="icon" type="image/png" href="images/favicon.jpg" />
+    <link rel="icon" type="image/png" href="./images/favicon.jpg" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap"
       rel="stylesheet"
@@ -25,7 +25,7 @@
         <div class="header-logo">
           <a href="#">
             <img
-              src="images/logo-white.png"
+              src="./images/logo-white.png"
               alt="Techium logo"
               width="160"
               height="40"
